--- a/view/login/index.html
+++ b/view/login/index.html
@@ -7,7 +7,7 @@
     <title>Entrar</title>
     <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.0.2/css/bootstrap.min.css'>
     <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css'>
-    <link rel="stylesheet" href="../../public/css/darkstyle.css">
+    <link rel="stylesheet" href="../../public/css/login/darkstyle.css">
 
 </head>
 
@@ -70,13 +70,13 @@
             <div class="overlay-container">
                 <div class="overlay">
                     <div class="overlay-panel overlay-left">
-                        <img class="logo" src="/s/img/logo.png" alt="logo" />
+                        <img class="logo" src="../../public/img/logo/logo.png" alt="logo" />
                         <h1>Conecte-se!</h1>
                         <p>Faça login aqui se você já possui uma conta</p>
                         <button class="ghost mt-5" id="signIn">Entrar</button>
                     </div>
                     <div class="overlay-panel overlay-right">
-                        <img class="logo" src="/s/img/logo.png" alt="logo" />
+                        <img class="logo" src="../../public/img/logo/logo.png" alt="logo" />
                         <h1>Criar uma conta!</h1>
                         <p>Cadastre-se se ainda não tiver uma conta...</p>
                         <button class="ghost" id="signUp">Cadastre-se</button>
