--- a/public/css/profile/style.css
+++ b/public/css/profile/style.css
@@ -1,4 +1,4 @@
-/* Estilo do corpo da página */
+@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css");
 body {
     font-family: 'Montserrat', sans-serif;
     height: 100vh;
