--- a/view/profile/index.html
+++ b/view/profile/index.html
@@ -18,12 +18,13 @@
             <div class="col-md-4">
 
                 <div class="card">
-                    <img src="http://placehold.it/180x180" class="card-img-top rounded-circle" alt="Foto de Perfil">
+                    <img src="https://placehold.co/480x480/27b737/ffffff?font=source-sans-pro&text=Imagem de\nPerfil" class="card-img-top rounded-circle" alt="Foto de Perfil">
                     <div class="card-body text-center" id="card-botton-img">
                         <button class="btn"><i class="fa fa-camera" style="font-size:20px;"></i><br>
                             Alterar Foto</button>
                         <h4 class="card-title">Usuário</h4>
-                        <p class="card-text">Usuário Nível Prata</p>
+
+                        <p class="card-text">Usuário Nível Prata<i class="bi bi-award" style="font-size: 22px;"></i></p>
 
                     </div>
                 </div>
@@ -84,7 +85,7 @@
                                 <p class="card-text" id="meu-email">meuemail@gmail.com</p>
                                 <form action="#" method="post">
                                     <input type="text" name="#" id="#" placeholder="Digite seu novo e-mail">
-                                    <button class="btn send">Alterar E-mail</button>
+                                    <button class="btn send">Alterar E-mail <i class="fa fa-upload" style="font-size:18px" ></i></button>
                                 </form>
                             </div>
                         </div>
